syntax = "proto3";

package common;

message Packet {
  uint32 packet_type = 1;  // 패킷 타입 (2바이트)
  uint32 version_length = 2;  // 버전 길이 (1바이트) 
  string version = 3;  // 버전 (문자열)
  uint32 sequence = 4;  // 패킷 번호 (4바이트)
  uint32 payload_length = 5;  // 데이터 길이 (4바이트)
  bytes payload = 6;  // 실제 데이터
}
